# line6-coreaudio

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
daemon/: Cargo.toml
daemon/src/: devices.rs  main.rs  shm.rs  usb.rs
docs/: ADDING_DEVICES.md  ARCHITECTURE.md  PROTOCOL.md
packaging/: RELEASE_README.txt
plugin/: Info.plist  Line6HAL.c  Makefile  README.md  haltest.c
scripts/: install-release.sh  install.sh  launchagent.sh  uninstall-release.sh  uninstall.sh
shared/: line6_shm.h
